Add mapper methods for ClientDocs objects